- Added an additional boost when rocket/grenade jumping.
- Added proper bindings for the Gatling Gun and the Railgun.
- Added a timer for games with a time limit.
- Enabled most server movement variables. The server host can change most of these in the server settings.
- Increased sv_airaccelerate from 10 to 150. This allows for easier air control when bunnyhopping.
- Added a randomizer mode!
	- Server hosts can change what weapons players spawn with the weapons.txt in the scripts folder. Please note that this will change the amount of weapons you can spawn with when you use impulse 101.
- Your Railgun beam's color will now change based on your primary player color.
- Reverted back to the original Half-Life 2 Deathmatch spawn algorithm, while retaining support for Counter-Strike Source and Day of Defeat Source spawnpoints.

Bug Fixes:
- Fixed a bug where the Railgun doesn't display effects when hitting a player.

Balance Tweaks:
- Limited how much ammo you can carry:
	- You can only carry up to 5 Combine Balls at once for the CBL-V2.
	- You can only carry up to 225 rounds at once for the Pistol.
	- You can only carry up to 225 rounds at once for the SMG.
	- You can only carry up to 500 rounds at once for the Gatling Gun.
	- You can only carry up to 48 rounds at once for the .357 Magnum.
	- You can only carry up to 25 bolts at once for the Crossbow.
	- You can only carry up to 45 rounds at once for the Shotgun.
	- You can only carry up to 5 rockets at once for the RPG.
	- You can only carry up to 5 grenades at once for the SMG.
	- You can only carry up to 5 frag grenades at once.
	- You can only carry up to 5 S.L.A.M. tripmines at once.
	- You can only carry up to 3 batteries at once for the Railgun. (300% charge)
- Nerfed the Railgun damage from 50 to 25.
- The Railgun now does the following when in an overcharged state:
	- The Railgun uses more battery when overcharged. (50% compared to 25%)